crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_help_view.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Help ────────────────────────────────────────────────────┐                    "
"                    │                                                          │                    "
"                    │  NAVIGATION                                              │                    "
"                    │    ↑/k, ↓/j     Move up/down                             │                    "
"                    │    ←/h, →/l     Select hotspot (Map view)                │                    "
"                    │    PgUp/PgDn    Page up/down                             │                    "
"                    │    Home/End     Jump to start/end                        │                    "
"                    │                                                          │                    "
"                    │  VIEWS                                                   │                    "
"                    │    Tab          Switch view                              │                    "
"                    │    1            Targets view                             │                    "
"                    │    2            Routes view                              │                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
