crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_map_view_wikelo_filter.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Stanton System Map [WIKELO SOURCES]  | all 2 hotspots | 100% z┐┌ Hotspot 1/2 (h/l to navigate) ──┐"
"│                                                               ││Zone: Port Olisar                │"
"│                                                               ││Position: (2.5, 1.5) Mkm         │"
"│                                                               ││Routes: 3                        │"
"│                                                               ││Value: 372.2K/catch              │"
"│                                                               ││                                 │"
"│                                                               ││Jump to: Crusader                │"
"│                                                               ││Exit at: 15000 Mm                │"
"│                       ⢀⡠⠤⠒⠒⠉⠉⣉⡉⠉⠉⠒⡒⠤⣀⠤⣔⣒⠤⢄⡀                   ││Lateral: 12 km (direct hit!)     │"
"│                     ⢀⠔⠁⢀⠤⠒⠉⠉⠉ ⠈⠉⠉⣑⣧⣎⡴⠛⢅⠈⠉⢳Crusader            ││                                 │"
"│                    ⡰⠁ ⡰⠁   ⣠⢤⣤⣤⣴⣋⣁⣏⣯⣳⣤⣀⣱⣠⠞⣀⠇                  ││                                 │"
"│                   ⢠⠃⣀⡰⠥⣀⣀⣀⣞⡁   ⠘⠮⣇⣇⣠⠼⠳⡒⠒⢳⠉                    ││                                 │"
"│                   ⡜⣯⠖⠻⡉⠓⣯Hurston⣠⠇⡇  ⡰⠁ ⡎                     ││                                 │"
"│                   ⢇⠸⣄ ⠑⢄⣸⢋⠝⠉⠉⠉⠉⠉   ⢀⠔⠁⢀⠜                      │└ ⓘ Exit distances are approximate┘"
"│                    ⠑⠪⠽⢭⡭⠛⠓⠤⠤⠤⣀⡠⠤⠤⠔⠊⠁⣀⠔⠁                       │┌ Intersecting Routes ────────────┐"
"│                        ⠈⠉⠒⠒⠤⠤⠤⠤⠤⠤⠒⠒⠉                          ││Cargo           Value      Threat│"
"│                                                               ││                                 │"
"│                                                               ││Quantanium      500.0K     3     │"
"│                                                               ││Laranite        300.0K     2     │"
"│                                                               ││WiDoW           800.0K     1     │"
"│                                                               ││                                 │"
"│                                                               ││                                 │"
"│                                                               ││                                 │"
"└ ◎:Wikelo │ w:filter │ n/N:limit │ z/Z:zoom │ a:all │ h/l:nav ─┘└─────────────────────────────────┘"
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
