crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_routes_with_wikelo.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Hot Routes (1 total) (sort: Profit/SCU) ─────────────────────────────────────────────────────────┐"
"│Commodity          Origin          Destination    Profit/SCU Haul Value   Wikelo  Ship            ↑"
"│                                                                                                  █"
"│Quantanium         HDMS-Bezdek     Area18 TDD     88         51.0K        ★85     Caterpillar     █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  ↓"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
