crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_targets_detail_expanded_many_items.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Targets (2 shown) (sort: Value) (Enter: hide) ───────────────────────────────────────────────────┐"
"│Dir    Ship               Cargo              Destination          Wikelo     Value      Threat    ↑"
"│                                                                                                  █"
"│▲ OUT  Caterpillar        Quantanium         Area18 TDD           ★8         1.25M      ███░░░░░░░█"
"│▼ IN   C2 Hercules        Laranite           Port Olisar          -          980.0K     ████████░░█"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  ║"
"│                                                                                                  ↓"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Wikelo Items at Grim HEX (HIGH VALUE) ───────────────────────────────────────────────────────────┐"
"│Irradiated Valakkar Fang (CreaturePart) ~75K aUEC                                                 │"
"│Quantanium (MinedMaterial) ~50K aUEC                                                              │"
"│Carinite (MinedMaterial) ~25K aUEC                                                                │"
"│Hadanite (MinedMaterial) ~20K aUEC                                                                │"
"│Council Scrip (MissionCurrency)                                                                   │"
"│... and 3 more items                                                                              │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
