crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_targets_detail_expanded_regular.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Targets (2 shown) (sort: Value) (Enter: hide) ───────────────────────────────────────────────────┐"
"│Dir    Ship             Cargo           Destination          Wikelo     Demand   Value    Threat  ↑"
"│                                                                                                  ║"
"│▲ OUT  Caterpillar      Quantanium      Area18 TDD           ★3         -        1.25M    ███░░░░░█"
"│▼ IN   C2 Hercules      Laranite        Port Olisar          1          -        980.0K   █████████"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  ↓"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Wikelo Items at Port Olisar ─────────────────────────────────────────────────────────────────────┐"
"│Council Scrip (MissionCurrency)                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
