crates/cli/src/tui/snapshots/sc_interdiction__tui__ui__tests__render_targets_view.snap
---
source: crates/cli/src/tui/ui.rs
expression: terminal.backend()
---
"┌ SC Interdiction - Crusader ──────────────────────────────────────────────────────────────────────┐"
"│ [1] Targets │ [2] Routes │ [3] Map                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Targets (2 shown) (sort: Value) ─────────────────────────────────────────────────────────────────┐"
"│Dir    Ship               Cargo              Destination          Wikelo     Value      Threat    ↑"
"│                                                                                                  █"
"│▲ OUT  Caterpillar        Quantanium         Area18 TDD           -          1.25M      ███░░░░░░░█"
"│▼ IN   C2 Hercules        Laranite           Port Olisar          -          980.0K     ████████░░█"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  ║"
"│                                                                                                  ↓"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌────────────────────────────────────────────────┐┌────────────────────────────────────────────────┐"
"│Ready                                           ││ q:Quit | 1/2/3:Views | Tab:Next | ?:Help | s:So│"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
